Refactor controller tests to use WebMvcTest and Mockito