@@ -1,5 +1,8 @@
 package com.deck.lab.backend.controller;
 
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.BDDMockito.willDoNothing;
 import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.authentication;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
@@ -10,52 +13,42 @@ import java.util.Collections;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.webmvc.test.autoconfigure.AutoConfigureMockMvc;
+import org.springframework.boot.webmvc.test.autoconfigure.WebMvcTest;
+import org.springframework.context.annotation.Import;
 import org.springframework.http.MediaType;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.transaction.annotation.Transactional;
 
+import com.deck.lab.backend.config.RateLimitConfig;
+import com.deck.lab.backend.config.properties.CorsProperties;
 import com.deck.lab.backend.dto.request.DeckCardRequestDto;
 import com.deck.lab.backend.dto.request.DeckSaveRequestDto;
-import com.deck.lab.backend.model.Card;
-import com.deck.lab.backend.model.CardAttribute;
-import com.deck.lab.backend.model.CardRace;
-import com.deck.lab.backend.model.CardType;
-import com.deck.lab.backend.model.Deck;
-import com.deck.lab.backend.model.DeckCard;
-import com.deck.lab.backend.model.DeckSection;
+import com.deck.lab.backend.dto.response.DeckResponseDto;
 import com.deck.lab.backend.model.Format;
-import com.deck.lab.backend.model.FrameType;
+import com.deck.lab.backend.model.DeckSection;
 import com.deck.lab.backend.model.User;
-import com.deck.lab.backend.repository.CardRepository;
-import com.deck.lab.backend.repository.DeckRepository;
-import com.deck.lab.backend.repository.UserRepository;
 import com.deck.lab.backend.security.InMemoryRateLimiter;
+import com.deck.lab.backend.security.JwtService;
 import com.deck.lab.backend.security.RateLimiter;
+import com.deck.lab.backend.security.SecurityConfig;
+import com.deck.lab.backend.service.DeckService;
+import com.deck.lab.backend.service.YdkService;
 
 import tools.jackson.databind.ObjectMapper;
 
-@SpringBootTest
-@AutoConfigureMockMvc
-@Transactional
+@WebMvcTest(DeckController.class)
+@Import({SecurityConfig.class, CorsProperties.class, RateLimitConfig.class})
+@DisplayName("DeckController Rate Limiting WebMvc Slice Tests")
 public class DeckControllerRateLimitTest {
 
     @Autowired
     private MockMvc mockMvc;
-
-    @Autowired
-    private UserRepository userRepository;
-
-    @Autowired
-    private CardRepository cardRepository;
-
-    @Autowired
-    private DeckRepository deckRepository;
 
     @Autowired
     private ObjectMapper objectMapper;
@@ -68,10 +61,20 @@ public class DeckControllerRateLimitTest {
     @Qualifier("deckSaveRateLimiter")
     private RateLimiter deckSaveRateLimiter;
 
+    @MockitoBean
+    private DeckService deckService;
+
+    @MockitoBean
+    private YdkService ydkService;
+
+    @MockitoBean
+    private JwtService jwtService;
+
+    @MockitoBean
+    private UserDetailsService userDetailsService;
+
     private User testUser;
     private UsernamePasswordAuthenticationToken testUserAuth;
-    private List<Card> testCards;
-    private Deck testDeck;
 
     @BeforeEach
     void setUp() {
@@ -79,37 +82,21 @@ public class DeckControllerRateLimitTest {
         ((InMemoryRateLimiter) deckSaveRateLimiter).reset();
 
         testUser = new User("ctrl-rate-user", "password", "ctrl-rate-user@example.com");
-        testUser = userRepository.save(testUser);
-        testUserAuth = new UsernamePasswordAuthenticationToken(testUser, null,
-                Collections.emptyList());
+        testUser.setId(1L);
+        testUserAuth = new UsernamePasswordAuthenticationToken(testUser, null, Collections.emptyList());
 
-        testCards = new ArrayList<>();
-        for (int i = 1; i <= 15; i++) {
-            Card card = new Card();
-            card.setName("RateLimitTest Card " + i);
-            card.setType(CardType.NORMAL_MONSTER);
-            card.setFrameType(FrameType.NORMAL);
-            card.setDescription("A test card " + i);
-            card.setRace(CardRace.DRAGON);
-            card.setAttribute(CardAttribute.LIGHT);
-            card.setAtk(1000);
-            card.setDef(1000);
-            card.setLevel(4);
-            card = cardRepository.save(card);
-            testCards.add(card);
-        }
-
-        testDeck = new Deck("RateLimitTest Deck", "A test deck", Format.TCG, testUser);
-        DeckCard dc = new DeckCard(testDeck, testCards.get(0), DeckSection.MAIN, 3);
-        testDeck.setDeckCards(new ArrayList<>(List.of(dc)));
-        testDeck = deckRepository.save(testDeck);
+        DeckResponseDto mockResponse = new DeckResponseDto(100L, "Sample Deck", "Desc", Format.GOAT,
+                Collections.emptyList(), null, "ctrl-rate-user");
+        given(deckService.createDeck(any(), any())).willReturn(mockResponse);
+        given(deckService.updateDeck(any(), any(), any())).willReturn(mockResponse);
+        willDoNothing().given(deckService).validateDeck(any());
     }
 
     private List<DeckCardRequestDto> createValidDeckCards() {
         List<DeckCardRequestDto> cardDtos = new ArrayList<>();
-        for (int i = 0; i < 14; i++) {
+        for (long i = 1; i <= 14; i++) {
             DeckCardRequestDto cardDto = new DeckCardRequestDto();
-            cardDto.setCardId(testCards.get(i).getId());
+            cardDto.setCardId(i);
             cardDto.setSection(DeckSection.MAIN);
             cardDto.setQuantity(3);
             cardDtos.add(cardDto);
@@ -118,7 +105,8 @@ public class DeckControllerRateLimitTest {
     }
 
     @Test
-    void testDeckValidationRateLimiting() throws Exception {
+    @DisplayName("validateDeck should enforce rate limit of 15 requests per window")
+    void validateDeck_should_blockWithTooManyRequests_when_rateLimitExceeded() throws Exception {
         DeckSaveRequestDto deckDto = new DeckSaveRequestDto();
         deckDto.setName("Validate Deck");
         deckDto.setFormatName(Format.GOAT);
@@ -143,15 +131,15 @@ public class DeckControllerRateLimitTest {
     }
 
     @Test
-    void testDeckSaveRateLimiting() throws Exception {
+    @DisplayName("createDeck should enforce rate limit of 5 requests per window")
+    void createDeck_should_blockWithTooManyRequests_when_rateLimitExceeded() throws Exception {
         DeckSaveRequestDto deckDto = new DeckSaveRequestDto();
         deckDto.setName("Save Deck");
         deckDto.setFormatName(Format.GOAT);
         deckDto.setDescription("Save Rate Limiting Test");
         deckDto.setDeckCards(createValidDeckCards());
 
-        // Save rate limit is 5 requests (we test both POST and PUT hitting the same
-        // limiter key)
+        // Save rate limit is 5 requests
         for (int i = 0; i < 5; i++) {
             mockMvc.perform(post("/api/decks")
                     .with(authentication(testUserAuth))
@@ -161,7 +149,7 @@ public class DeckControllerRateLimitTest {
                     .andExpect(status().isCreated());
         }
 
-        // The 6th request must trigger 429 (either POST or PUT)
+        // The 6th request must trigger 429
         mockMvc.perform(post("/api/decks")
                 .with(authentication(testUserAuth))
                 .contentType(MediaType.APPLICATION_JSON)
@@ -171,7 +159,8 @@ public class DeckControllerRateLimitTest {
     }
 
     @Test
-    void testDeckUpdateRateLimiting() throws Exception {
+    @DisplayName("updateDeck should enforce rate limit of 5 requests per window")
+    void updateDeck_should_blockWithTooManyRequests_when_rateLimitExceeded() throws Exception {
         DeckSaveRequestDto deckDto = new DeckSaveRequestDto();
         deckDto.setName("Updated Deck");
         deckDto.setFormatName(Format.GOAT);
@@ -179,7 +168,7 @@ public class DeckControllerRateLimitTest {
         deckDto.setDeckCards(createValidDeckCards());
 
         for (int i = 0; i < 5; i++) {
-            mockMvc.perform(put("/api/decks/" + testDeck.getId())
+            mockMvc.perform(put("/api/decks/100")
                     .with(authentication(testUserAuth))
                     .contentType(MediaType.APPLICATION_JSON)
                     .content(objectMapper.writeValueAsString(deckDto))
@@ -187,7 +176,7 @@ public class DeckControllerRateLimitTest {
                     .andExpect(status().isOk());
         }
 
-        mockMvc.perform(put("/api/decks/" + testDeck.getId())
+        mockMvc.perform(put("/api/decks/100")
                 .with(authentication(testUserAuth))
                 .contentType(MediaType.APPLICATION_JSON)
                 .content(objectMapper.writeValueAsString(deckDto))
